[package]
name = "ptfs"
version = "0.1.0"
authors = ["Hirotomo Moriwaki <philopon.dependence@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.2"
webbrowser = "0.5.1" 
reqwest = { version = "0.9.18", features=["rustls-tls"], default-features=false }
serde_json = "1.0.39" 
serde = { version = "1.0", features = ["derive"] }
read_input = "0.8.1"
dirs = "2.0.1"
lazy_static = "1.3.0"
failure = "0.1.5"
env_logger = "0.6.1"
log = "0.4.6"
sha2 = "0.8.0"
indicatif = "0.11.0"
rpassword = "3.0.2"
aes-ctr = "0.3.0"
rustc-hex = "2.0.1"

[profile.release]
lto = true
